@@ -17,4 +17,4 @@ int check_reverse( char *, struct in_addr * );
 int check_hostname( char * );
 struct simta_red *host_local( char * );
 int rbl_add( struct rbl**, int, char *, char * );
-int rbl_check( struct rbl *, struct in_addr *, struct rbl**, char ** );
+int rbl_check( struct rbl *, struct in_addr *, char *, struct rbl**, char ** );
